Fixed #62, header z-index 적용

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -15,12 +15,10 @@
   background-color: transparent;
   user-select: none;
   pointer-events: none;
-  & > * {
-    pointer-events: all;
-  }
 
   @media screen and (max-width: $break-l) {
     padding: 0 1.5rem 1rem 1.5rem;
+    z-index: 2;
   }
   @media screen and (max-width: $break-m) {
     padding: 0 1rem 0.5rem 1rem;
@@ -29,6 +27,11 @@
   @media screen and (max-width: $break-s) {
     height: $header-height-s;
     padding: 0 1rem 0.25rem 1rem;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  }
+
+  & > * {
+    pointer-events: all;
   }
 
   &.mobile {
@@ -48,6 +51,8 @@
 
     @media screen and (max-width: $break-s) {
       align-items: center;
+      align-self: center;
+      margin-top: 0.5rem;
     }
 
     .header-profile-image-wrap {
